# gr_common

./: .gitignore
gr_experiments/: dyn_reconfigurator.py  dynrec_sample.yaml  icrafree  icrafree_v4  icrafrontal  icrafrontal_v4  icrarandom  icrarandom_v4  icraside  icraside_v4  icrastatic  icrastatic_v4  metrics.py  risk_extractor.py  risk_tools.py  simulation_static  srvtest.txt.txt
gr_experiments/2021/: reference
gr_experiments/2021/cfg/: params.yaml
gr_experiments/2022/: configuration.py  main.py  manager.py  plot_collisions.py
gr_experiments/2022/benchmark/: collision.txt  collision_0.txt  estop.txt  start.txt  stop.txt
gr_experiments/2022/braking/: collision.txt  collision_0.txt  estop.txt  odom.txt  start.txt  stop.txt
gr_experiments/2022/braking2/: collision.txt  collision_0.txt  estop.txt  start.txt  stop.txt
gr_experiments/2022/config/: human_config.yaml  human_config_0.yaml
gr_experiments/2022/merge/: collision.txt  collision_0.txt  estop.txt  hri_requests.txt  start.txt  stop.txt
gr_experiments/2022/merge2/: collision.txt  collision_0.txt  estop.txt  hri_requests.txt  odom.txt  start.txt  state_transitions.txt  stop.txt
gr_experiments/2022/merge3/: collision.txt  collision_0.txt  estop.txt  start.txt  stop.txt
gr_experiments/2022/simple/: collision.txt  collision_0.txt  estop.txt  start.txt  stop.txt
gr_experiments/2022/state/: collision.txt  collision_0.txt  estop.txt  hri_requests.txt  odom.txt  start.txt  stop.txt
gr_experiments/2022/state2/: collision.txt  collision_0.txt  estop.txt  hri_requests.txt  start.txt  state_transitions.txt  stop.txt
gr_experiments/2022/test/: start.txt
gr_experiments/2022/text/: collision.txt  collision_0.txt  estop.txt  start.txt  stop.txt
gr_experiments/2409/: freebenchmark.txt  freerisk.txt  frontalrisk.txt  randomrisk.txt  siderisk.txt  staticbenchmark.txt  staticrisk.txt  test.txt
gr_experiments/2509/: freebenchmark.txt  freerisk.txt  frontalrisk.txt  randomrisk.txt  siderisk.txt  staticbenchmark.txt  staticrisk.txt
gr_interfaces/gr_action_msgs/: CMakeLists.txt  package.xml
gr_interfaces/gr_action_msgs/action/: .GRNavigation.action.swo  .GRNavigation.action.swp  GRDepthProcess.action  GREdges.action  GRNavigation.action  GrPCProcess.action  PolyFitRow.action  SimMotionPlanner.action  SingleRowExecution.action
gr_interfaces/gr_action_msgs/srv/: GREdges2.srv  GetMetrics.srv
gr_interfaces/gr_hri/: bluetooth_signal_monitor.py  hri_sound_hri.py
gr_interfaces/navigation_msgs/: CMakeLists.txt  package.xml
gr_interfaces/navigation_msgs/msg/: Edge.msg  TopoExecutionStatus.msg  TopologicalInfo.msg  TopologicalMap.msg  TopologicalNode.msg
gr_interfaces/safety_core/: package.xml
gr_interfaces/safety_msgs/: CMakeLists.txt  package.xml
gr_interfaces/safety_msgs/msg/: ExecutionMetadata.msg  HumanSafety.msg  Object.msg  RiskIndexes.msg  StateTransition.msg
gr_safety/gr_safe_controller/: pitch_correction.py  safe_controller.py
gr_safety/gr_safe_gridmap/: CMakeLists.txt  package.xml
gr_safety/gr_safe_gridmap/cfg/: SafeGridMap.cfg
gr_safety/gr_safe_gridmap/config/: default.yaml  gridmap_config.yaml  safety.yaml  safety_regions.yaml
gr_safety/gr_safe_gridmap/include/gr_safe_gridmap/: layer_subscriber.hpp  main_gridmap.hpp  safe_gridmap.h
gr_safety/gr_safe_gridmap/launch/: gridmap.launch  tutorial.launch
gr_safety/gr_safe_gridmap/scripts/: pitch_correction.py  safe_controller.py
gr_safety/gr_safe_gridmap/src/: safe_gridmap.cpp  safe_gridmap_node.cpp  safe_gridmap_tutorial.cpp
gr_safety/gr_safety_gridmap/: CMakeLists.txt  package.xml
gr_safety/gr_safety_gridmap/config/: default.yaml  gridmap_config.yaml  safety.yaml  safety_regions.yaml  safety_regions_original.yaml
gr_safety/gr_safety_gridmap/include/gr_safety_gridmap/: layer_subscriber.h  layer_subscriber.hpp  main_gridmap.hpp  safety_gridmap.h
gr_safety/gr_safety_gridmap/launch/: gridmap.launch  turorial.launch  tutorial.launch
gr_safety/gr_safety_gridmap/src/: layer_subscriber.cpp  safety_gridmap.cpp  safety_gridmap_node.cpp
gr_safety/gr_safety_policies/: CMakeLists.txt  actions_plugins.xml  package.xml  policies_plugins.xml
gr_safety/gr_safety_policies/cfg/: ProximityPolicy.cfg
gr_safety/gr_safety_policies/config/: proximity_monitor.yaml  state_policy.yaml
gr_safety/gr_safety_policies/scripts/: gr_safe_controller_node.py  pitch_correction.py  (+1 more)
gr_simulation/: CMakeLists.txt  gr_dyn_obstacle_plugin.cc  gr_dyn_obstacle_plugin_2.cc  grasstest.world  grdyn.world  grdyn_pub.cc  hello.world  my_mprim_test.mprim  ok.mprim  test_world.world
gr_simulation/cfg/: PersonMotion.cfg
gr_simulation/include/: dynamic_object_gazebo_interface.h  grass_row.h  motion_model.h  motion_planner.h  obstacle_coordinator.h  visual_grass_row.h
gr_simulation/include/gazebo/: grass_row.h  motion_planner.h  obstacle_coordinator.h
gr_simulation/include/ros/: dynamic_object_ros_animation.h  dynamic_object_ros_interface.h  motion_planner.h  ros_interface.h  simple_ros_interface.h
gr_simulation/launch/: test.launch
gr_simulation/msgs/: CMakeLists.txt  grasscutter.proto
gr_simulation/scripts/: patterns.py  test_sm.py
gr_simulation/scripts/dump/: simple_caller.py
gr_simulation/src/: dynamic_object_gazebo_interface.cpp  dynamic_object_ros_interface.cpp  grass_event_caller.cpp  grass_row.cpp  grdyn_pub.cpp  motion_planner.cpp  obstacles_coordinator.cpp  obstacles_coordinator_node.cpp  visual_grass_row.cpp
gr_simulation/src/common/: motion_planner.cpp  obstacles_coordinator.cpp
gr_simulation/src/gazebo/: dynamic_object_gazebo_interface.cpp  motion_planner.cpp  obstacles_coordinator.cpp  obstacles_coordinator_node.cpp
gr_simulation/src/grassrobot/: grass_event_caller.cpp  grass_row.cpp  visual_grass_row.cpp
gr_simulation/src/ros/: dynamic_object_ros_interface.cpp  gazebo_ros_animation.cpp  motion_planner.cpp  ros_interface.cpp  ros_interface_node.cpp  simple_ros_interface.cpp
gr_simulation/worlds/: movingcube.world  myempty.world  realistic_simplewalkingperson.world  simplewalkingperson.world  testing.world  walkingperson.world
(+34 files in other folders)
