<package>
    <name>gr_action_msgs</name>
    <version>0.1.13</version>
    <description>
        This package provides common interfaces for navigation actions for GR project.
    </description>
    <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>safety_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>darknet_ros_msgs</build_depend>

    <run_depend>actionlib_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>safety_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>darknet_ros_msgs</run_depend>

</package>
