<?xml version="1.0"?>
<package format="2">
  <name>gr_safe_gridmap</name>
  <version>0.26.1</version>
  <description>Safety Gridmap based on grid_map from anybotics</description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <!--depend>grid_map_cv</depend-->
  <depend>grid_map_filters</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_octomap</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>octomap_msgs</depend>
  <depend>topic_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <build_depend>safety_msgs</build_depend>
  <exec_depend>safety_msgs</exec_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <!--build_depend>ddynamic_reconfigure</build_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend-->

</package>
