<?xml version="1.0"?>
<package>
  <name>gr_safe_gridmap</name>
  <version>0.26.1</version>
  <description>Safety Gridmap based on grid_map from anybotics</description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_octomap</build_depend>
  <build_depend>grid_map_rviz_plugin</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_filters</run_depend>
  <run_depend>grid_map_loader</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_octomap</run_depend>
  <run_depend>grid_map_rviz_plugin</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>safety_msgs</run_depend>

  <!--build_depend>ddynamic_reconfigure</build_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend-->

</package>
